# SkyWard

./: README.md
Sky-core/: Cargo.toml  sky.db
Sky-core/src/: chat.db  main.rs  mod.rs  sky.db
Sky-core/src/chats/: mod.rs
Sky-core/src/contacts/: mod.rs
Sky-core/src/cover/: mod.rs
Sky-core/src/identity/: mod.rs
Sky-core/src/invites/: mod.rs
Sky-core/src/messages/: mod.rs
Sky-core/src/storage/: mod.rs
